--- a/homeworks/week4/hw1/index.html
+++ b/homeworks/week4/hw1/index.html
@@ -20,25 +20,25 @@
 					<div class="main__btnContent num devide">÷</div>
 				</div>
 				<div class="main__btn">
-					<div class="main__btnContent num seven">7</div>
-					<div class="main__btnContent num eight">8</div>
-					<div class="main__btnContent num nine">9</div>
+					<div class="main__btnContent num num7">7</div>
+					<div class="main__btnContent num num8">8</div>
+					<div class="main__btnContent num num9">9</div>
 					<div class="main__btnContent num time">×</div>
 				</div>
 				<div class="main__btn">
-					<div class="main__btnContent num four">4</div>
-					<div class="main__btnContent num five">5</div>
-					<div class="main__btnContent num six">6</div>
+					<div class="main__btnContent num num4">4</div>
+					<div class="main__btnContent num num5">5</div>
+					<div class="main__btnContent num num6">6</div>
 					<div class="main__btnContent num minus">-</div>
 				</div>
 				<div class="main__btn">
-					<div class="main__btnContent num one">1</div>
-					<div class="main__btnContent num two">2</div>
-					<div class="main__btnContent num three">3</div>
+					<div class="main__btnContent num num1">1</div>
+					<div class="main__btnContent num num2">2</div>
+					<div class="main__btnContent num num3">3</div>
 					<div class="main__btnContent num plus">+</div>
 				</div>
 				<div class="main__btn">
-					<div class="main__btnContent num zero">0</div>
+					<div class="main__btnContent num num0">0</div>
 					<div class="main__btnContent num point">.</div>
 					<div id="equal" class="equal">=</div>
 				</div>
