--- a/homeworks/week4/hw4/index.html
+++ b/homeworks/week4/hw4/index.html
@@ -7,12 +7,12 @@
 	</script>
 </head>
 <body>
-	<div id="title">title</div>
+	<div class="title">title</div>
 	<script>
 		//實作function `q`，快速的選取元素，接著進行常見的操作（`hide`跟`show`）
 		//調用jQuery（在header插入Google jQuery的來源），才直接有hide(), show()方法
 		var q = (e) =>{return $(e)};
-		var element = q('#title'); //已經抓到元素了
+		var element = q('.title'); //已經抓到元素了
 	</script>
 	
 </body>
